--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "luxon": "^3.7.1",
     "next": "15.4.6",
     "next-themes": "^0.4.6",
+    "node-fetch": "^3.3.2",
     "openai": "^5.12.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
