--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "lucide-react": "^0.539.0",
     "luxon": "^3.7.1",
     "next": "15.4.6",
